# poc-starlingx-messages

./: .gitignore  AppGenGuide.md  BlogPost.md  BuildGuide.md  Demo.md  Dockerfile  Legacy_BuildGuide.md  Makefile  README.md  requirements.txt  sysadmin@localhost
.github/workflows/: publish-helm-package.yml
helm-chart/: Chart.yaml  values.yaml
helm-chart/templates/: deployment.yaml  pod.yaml  service.yaml
packaging/flux-cd/: kustomization.yaml
packaging/flux-cd/base/: helmrepository.yaml  kustomization.yaml
packaging/flux-cd/poc-starlingx/: helmrelease.yaml
packaging/fluxcd-manifests/: README.md
packaging/fluxcd-manifests/base/: helmrepository.yaml
packaging/fluxcd-manifests/poc-starlingx/: poc-starlingx-static-overrides.yaml
packaging/helm/helm-chart/: Chart.yaml  values.yaml
packaging/helm/overrides/: central-overrides.yaml  node-overrides.yaml
requirements/: dev.txt  requirements.txt
src/: app.py  main.py
src/app/: central.py  circularqueue.py  circulartimeseriesqueue.py  config.py  httprequests.py  node.py  utils.py
stx-packaging/: metadata.yaml  metadata.yml
stx-packaging/fluxcd-manifests/base/: helmrepository.yaml
stx-plugin/: setup.cfg  setup.py
stx-plugin/debian_DELETE?/: metadata.yml
stx-plugin/debian_DELETE?/deb_folder/: changelog  control  rules
stx-plugin/k8sapp_poc_starlingx/common/: constants.py
stx-plugin/k8sapp_poc_starlingx/helm/: poc_starlingx.py
stx-plugin/k8sapp_poc_starlingx/k8sapp_poc_starlingx/helm/: poc_starlingx.py
stx-plugin/k8sapp_poc_starlingx/kustomize/: kustomize_poc_starlingx.py
(+3 files in other folders)
