[metadata]
name = k8sapp-poc-starlingx
summary = StarlingX sysinv extensions for poc-starlingx
author = Bruno Muniz
author-email = bruno.muniz@encora.com
url = https://github.com/bmuniz-daitan/poc-starlingx-messages
classifier =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    requests~=2.31.0
    matplotlib~=3.7.1

[files]
packages =
    k8sapp_poc_starlingx

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    poc-starlingx = systemconfig.helm_plugins.poc_starlingx

systemconfig.helm_plugins.poc_starlingx =
    001_poc-starlingx = k8sapp_poc_starlingx.helm.poc_starlingx:PocStarlingxHelm

systemconfig.fluxcd.kustomize_ops =
    poc-starlingx = k8sapp_poc_starlingx.kustomize.kustomize_poc_starlingx:PocStarlingxFluxCDKustomizeOperator

[wheel]
universal = 1
